# mcp-tabular

./: .gitignore  CONNECT_TO_CLAUDE_DESKTOP.md  README.md  TEST_PROMPTS.md  claude_desktop_config.json  pyproject.toml
data/: electronics_only_20251205_023533.csv  sample.db  sample_sales.csv
scripts/: create_sample_db.py  generate_claude_config.py
src/mcp_tabular/: __init__.py  server.py
